most recent updates

--- a/Clients/SlapshotCustomClients.csproj
+++ b/Clients/SlapshotCustomClients.csproj
@@ -11,6 +11,10 @@
   </Target>
 
   <ItemGroup>
+    <ProjectReference Include="..\Packets\Packets.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="0Harmony">
       <HintPath>F:\Steam\steamapps\common\SlapshotRebound\MelonLoader\net6\0Harmony.dll</HintPath>
     </Reference>
